lib/antlr/DartParser.dart
// Generated from /Users/bonfry/Desktop/compose_transpiler/antlr/DartParser.g4 by ANTLR 4.13.1
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'DartParserListener.dart';
import 'DartParserBaseListener.dart';
import 'DartParserVisitor.dart';
import 'DartParserBaseVisitor.dart';
const int RULE_dartScript = 0, RULE_line = 1, RULE_statement = 2, RULE_lineStatement = 3, 
          RULE_print = 4, RULE_type = 5, RULE_identifier = 6, RULE_varDeclaration = 7, 
          RULE_finalDeclatation = 8, RULE_constDeclatation = 9, RULE_variableDeclaration = 10, 
          RULE_assignment = 11, RULE_expression = 12, RULE_if = 13, RULE_while = 14, 
          RULE_for = 15, RULE_body = 16, RULE_function = 17, RULE_class = 18, 
          RULE_constructor = 19, RULE_parameter = 20;
class DartParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.1', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_NEWLINE = 1, TOKEN_WS = 2, TOKEN_VAR = 3, TOKEN_FINAL = 4, 
                   TOKEN_CONST = 5, TOKEN_PRINT = 6, TOKEN_AS = 7, TOKEN_INT = 8, 
                   TOKEN_DOUBLE = 9, TOKEN_BOOL = 10, TOKEN_STRING = 11, 
                   TOKEN_INTLIT = 12, TOKEN_BOOL_LIT = 13, TOKEN_DOUBLELIT = 14, 
                   TOKEN_PLUS = 15, TOKEN_MINUS = 16, TOKEN_ASTERISK = 17, 
                   TOKEN_DIVISION = 18, TOKEN_AND = 19, TOKEN_OR = 20, TOKEN_NOT = 21, 
                   TOKEN_LARROW = 22, TOKEN_RARROW = 23, TOKEN_GREATER_EQ = 24, 
                   TOKEN_LOWER_EQ = 25, TOKEN_EQUAL = 26, TOKEN_NOT_EQUAL = 27, 
                   TOKEN_ASSIGN = 28, TOKEN_LPAREN = 29, TOKEN_RPAREN = 30, 
                   TOKEN_LBRACKET = 31, TOKEN_RBRACKET = 32, TOKEN_LCURL = 33, 
                   TOKEN_RCURL = 34, TOKEN_DOT = 35, TOKEN_COMMA = 36, TOKEN_SEMICOLON = 37, 
                   TOKEN_IF = 38, TOKEN_ELSE = 39, TOKEN_FOR = 40, TOKEN_IN = 41, 
                   TOKEN_WHILE = 42, TOKEN_CLASS = 43, TOKEN_NEW = 44, TOKEN_SUPER = 45, 
                   TOKEN_THIS = 46, TOKEN_EXTENDS = 47, TOKEN_ID = 48;

  @override
  final List<String> ruleNames = [
    'dartScript', 'line', 'statement', 'lineStatement', 'print', 'type', 
    'identifier', 'varDeclaration', 'finalDeclatation', 'constDeclatation', 
    'variableDeclaration', 'assignment', 'expression', 'if', 'while', 'for', 
    'body', 'function', 'class', 'constructor', 'parameter'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, null, null, "'var'", "'final'", "'const'", "'print'", "'as'", 
      "'int'", "'double'", "'bool'", "'String'", null, null, null, "'+'", 
      "'-'", "'*'", "'/'", "'&&'", "'||'", "'!'", "'<'", "'>'", "'>='", 
      "'<='", "'=='", "'!='", "'='", "'('", "')'", "'['", "']'", "'{'", 
      "'}'", "'.'", "','", "';'", "'if'", "'else'", "'for'", "'in'", "'while'", 
      "'class'", "'new'", "'super'", "'this'", "'extends'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "NEWLINE", "WS", "VAR", "FINAL", "CONST", "PRINT", "AS", "INT", 
      "DOUBLE", "BOOL", "STRING", "INTLIT", "BOOL_LIT", "DOUBLELIT", "PLUS", 
      "MINUS", "ASTERISK", "DIVISION", "AND", "OR", "NOT", "LARROW", "RARROW", 
      "GREATER_EQ", "LOWER_EQ", "EQUAL", "NOT_EQUAL", "ASSIGN", "LPAREN", 
      "RPAREN", "LBRACKET", "RBRACKET", "LCURL", "RCURL", "DOT", "COMMA", 
      "SEMICOLON", "IF", "ELSE", "FOR", "IN", "WHILE", "CLASS", "NEW", "SUPER", 
      "THIS", "EXTENDS", "ID"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'DartParser.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  DartParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  DartScriptContext dartScript() {
    dynamic _localctx = DartScriptContext(context, state);
    enterRule(_localctx, 0, RULE_dartScript);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 43; 
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      do {
        state = 42;
        _localctx.scriptLines = line();
        state = 45; 
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      } while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 296052095717240) != 0));
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  LineContext line() {
    dynamic _localctx = LineContext(context, state);
    enterRule(_localctx, 2, RULE_line);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 47;
      statement();
      state = 48;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_EOF || _la == TOKEN_NEWLINE)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  StatementContext statement() {
    dynamic _localctx = StatementContext(context, state);
    enterRule(_localctx, 4, RULE_statement);
    int _la;
    try {
      int _alt;
      state = 71;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 3, context)) {
      case 1:
        _localctx = StatementWithSemicolonContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 50;
        lineStatement();
        state = 54;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_NEWLINE) {
          state = 51;
          match(TOKEN_NEWLINE);
          state = 56;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 57;
        match(TOKEN_SEMICOLON);
        state = 61;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 2, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 58;
            match(TOKEN_NEWLINE); 
          }
          state = 63;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 2, context);
        }
        break;
      case 2:
        _localctx = BodyCostructContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 64;
        body();
        break;
      case 3:
        _localctx = IfConstructContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 65;
        if_();
        break;
      case 4:
        _localctx = WhileConstructContext(_localctx);
        enterOuterAlt(_localctx, 4);
        state = 66;
        while_();
        break;
      case 5:
        _localctx = ForConstructContext(_localctx);
        enterOuterAlt(_localctx, 5);
        state = 67;
        for_();
        break;
      case 6:
        _localctx = FunctionDeclarationContext(_localctx);
        enterOuterAlt(_localctx, 6);
        state = 68;
        function();
        break;
      case 7:
        _localctx = ClassDeclarationContext(_localctx);
        enterOuterAlt(_localctx, 7);
        state = 69;
        class_();
        break;
      case 8:
        _localctx = ConstructorStatementContext(_localctx);
        enterOuterAlt(_localctx, 8);
        state = 70;
        constructor();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  LineStatementContext lineStatement() {
    dynamic _localctx = LineStatementContext(context, state);
    enterRule(_localctx, 6, RULE_lineStatement);
    try {
      state = 76;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_VAR:
      case TOKEN_FINAL:
      case TOKEN_CONST:
      case TOKEN_INT:
      case TOKEN_DOUBLE:
      case TOKEN_BOOL:
      case TOKEN_STRING:
        _localctx = VarDeclarationStatementContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 73;
        variableDeclaration();
        break;
      case TOKEN_ID:
        _localctx = AssignmentStatementContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 74;
        assignment();
        break;
      case TOKEN_PRINT:
        _localctx = PrintStatementContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 75;
        print();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  PrintContext print() {
    dynamic _localctx = PrintContext(context, state);
    enterRule(_localctx, 8, RULE_print);
    try {
      enterOuterAlt(_localctx, 1);
      state = 78;
      match(TOKEN_PRINT);
      state = 79;
      match(TOKEN_LPAREN);
      state = 80;
      expression(0);
      state = 81;
      match(TOKEN_RPAREN);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TypeContext type() {
    dynamic _localctx = TypeContext(context, state);
    enterRule(_localctx, 10, RULE_type);
    try {
      state = 87;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_INT:
        _localctx = IntegerContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 83;
        match(TOKEN_INT);
        break;
      case TOKEN_DOUBLE:
        _localctx = DecimalContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 84;
        match(TOKEN_DOUBLE);
        break;
      case TOKEN_BOOL:
        _localctx = BooleanContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 85;
        match(TOKEN_BOOL);
        break;
      case TOKEN_STRING:
        _localctx = StringContext(_localctx);
        enterOuterAlt(_localctx, 4);
        state = 86;
        match(TOKEN_STRING);
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  IdentifierContext identifier() {
    dynamic _localctx = IdentifierContext(context, state);
    enterRule(_localctx, 12, RULE_identifier);
    try {
      enterOuterAlt(_localctx, 1);
      state = 89;
      match(TOKEN_ID);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  VarDeclarationContext varDeclaration() {
    dynamic _localctx = VarDeclarationContext(context, state);
    enterRule(_localctx, 14, RULE_varDeclaration);
    try {
      enterOuterAlt(_localctx, 1);
      state = 95;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 6, context)) {
      case 1:
        state = 91;
        match(TOKEN_VAR);
        break;
      case 2:
        state = 92;
        type();
        break;
      case 3:
        state = 93;
        match(TOKEN_VAR);
        state = 94;
        type();
        break;
      }
      state = 99;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 7, context)) {
      case 1:
        state = 97;
        identifier();
        break;
      case 2:
        state = 98;
        assignment();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  FinalDeclatationContext finalDeclatation() {
    dynamic _localctx = FinalDeclatationContext(context, state);
    enterRule(_localctx, 16, RULE_finalDeclatation);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 101;
      match(TOKEN_FINAL);
      state = 103;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 3840) != 0)) {
        state = 102;
        type();
      }

      state = 107;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 9, context)) {
      case 1:
        state = 105;
        identifier();
        break;
      case 2:
        state = 106;
        assignment();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ConstDeclatationContext constDeclatation() {
    dynamic _localctx = ConstDeclatationContext(context, state);
    enterRule(_localctx, 18, RULE_constDeclatation);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 109;
      match(TOKEN_CONST);
      state = 111;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if ((((_la) & ~0x3f) == 0 && ((1 << _la) & 3840) != 0)) {
        state = 110;
        type();
      }

      state = 115;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 11, context)) {
      case 1:
        state = 113;
        identifier();
        break;
      case 2:
        state = 114;
        assignment();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  VariableDeclarationContext variableDeclaration() {
    dynamic _localctx = VariableDeclarationContext(context, state);
    enterRule(_localctx, 20, RULE_variableDeclaration);
    try {
      state = 120;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_VAR:
      case TOKEN_INT:
      case TOKEN_DOUBLE:
      case TOKEN_BOOL:
      case TOKEN_STRING:
        enterOuterAlt(_localctx, 1);
        state = 117;
        varDeclaration();
        break;
      case TOKEN_FINAL:
        enterOuterAlt(_localctx, 2);
        state = 118;
        finalDeclatation();
        break;
      case TOKEN_CONST:
        enterOuterAlt(_localctx, 3);
        state = 119;
        constDeclatation();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  AssignmentContext assignment() {
    dynamic _localctx = AssignmentContext(context, state);
    enterRule(_localctx, 22, RULE_assignment);
    try {
      enterOuterAlt(_localctx, 1);
      state = 122;
      identifier();
      state = 123;
      match(TOKEN_ASSIGN);
      state = 124;
      expression(0);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ExpressionContext expression([int _p = 0]) {
    final _parentctx = context;
    final _parentState = state;
    dynamic _localctx = ExpressionContext(context, _parentState);
    var _prevctx = _localctx;
    var _startState = 24;
    enterRecursionRule(_localctx, 24, RULE_expression, _p);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 184;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 21, context)) {
      case 1:
        _localctx = NegativeOperationContext(_localctx);
        context = _localctx;
        _prevctx = _localctx;

        state = 127;
        _localctx.operator_ = match(TOKEN_NOT);
        state = 128;
        _localctx.right = expression(9);
        break;
      case 2:
        _localctx = ParenExpressionContext(_localctx);
        context = _localctx;
        _prevctx = _localctx;
        state = 129;
        match(TOKEN_LPAREN);
        state = 130;
        expression(0);
        state = 131;
        match(TOKEN_RPAREN);
        break;
      case 3:
        _localctx = VarReferenceContext(_localctx);
        context = _localctx;
        _prevctx = _localctx;
        state = 133;
        match(TOKEN_ID);
        break;
      case 4:
        _localctx = MinusExpressionContext(_localctx);
        context = _localctx;
        _prevctx = _localctx;
        state = 134;
        match(TOKEN_MINUS);
        state = 135;
        expression(5);
        break;
      case 5:
        _localctx = IntLiteralContext(_localctx);
        context = _localctx;
        _prevctx = _localctx;
        state = 136;
        match(TOKEN_INTLIT);
        break;
      case 6:
        _localctx = DecimalLiteralContext(_localctx);
        context = _localctx;
        _prevctx = _localctx;
        state = 137;
        match(TOKEN_DOUBLELIT);
        break;
      case 7:
        _localctx = BooleanLiteralContext(_localctx);
        context = _localctx;
        _prevctx = _localctx;
        state = 138;
        match(TOKEN_BOOL_LIT);
        break;
      case 8:
        _localctx = ClassLiteralContext(_localctx);
        context = _localctx;
        _prevctx = _localctx;
        state = 140;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_NEW) {
          state = 139;
          match(TOKEN_NEW);
        }

        state = 142;
        identifier();
        state = 146;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_NEWLINE) {
          state = 143;
          match(TOKEN_NEWLINE);
          state = 148;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 149;
        match(TOKEN_LPAREN);
        state = 153;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_NEWLINE) {
          state = 150;
          match(TOKEN_NEWLINE);
          state = 155;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 174;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 299067701817344) != 0)) {
          state = 156;
          expression(0);
          state = 160;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 16, context);
          while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
            if (_alt == 1) {
              state = 157;
              match(TOKEN_NEWLINE); 
            }
            state = 162;
            errorHandler.sync(this);
            _alt = interpreter!.adaptivePredict(tokenStream, 16, context);
          }
          state = 164;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          if (_la == TOKEN_COMMA) {
            state = 163;
            match(TOKEN_COMMA);
          }

          state = 169;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          while (_la == TOKEN_NEWLINE) {
            state = 166;
            match(TOKEN_NEWLINE);
            state = 171;
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
          }
          state = 176;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        state = 177;
        match(TOKEN_RPAREN);
        state = 181;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 20, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 178;
            match(TOKEN_NEWLINE); 
          }
          state = 183;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 20, context);
        }
        break;
      }
      context!.stop = tokenStream.LT(-1);
      state = 209;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 23, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          if (parseListeners != null) triggerExitRuleEvent();
          _prevctx = _localctx;
          state = 207;
          errorHandler.sync(this);
          switch (interpreter!.adaptivePredict(tokenStream, 22, context)) {
          case 1:
            _localctx = MathOperationContext(new ExpressionContext(_parentctx, _parentState));
            _localctx.left = _prevctx;
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 186;
            if (!(precpred(context, 15))) {
              throw FailedPredicateException(this, "precpred(context, 15)");
            }
            state = 187;
            _localctx.operator_ = tokenStream.LT(1);
            _la = tokenStream.LA(1)!;
            if (!(_la == TOKEN_ASTERISK || _la == TOKEN_DIVISION)) {
              _localctx.operator_ = errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 188;
            _localctx.right = expression(16);
            break;
          case 2:
            _localctx = MathOperationContext(new ExpressionContext(_parentctx, _parentState));
            _localctx.left = _prevctx;
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 189;
            if (!(precpred(context, 14))) {
              throw FailedPredicateException(this, "precpred(context, 14)");
            }
            state = 190;
            _localctx.operator_ = tokenStream.LT(1);
            _la = tokenStream.LA(1)!;
            if (!(_la == TOKEN_PLUS || _la == TOKEN_MINUS)) {
              _localctx.operator_ = errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 191;
            _localctx.right = expression(15);
            break;
          case 3:
            _localctx = CompareOperationContext(new ExpressionContext(_parentctx, _parentState));
            _localctx.left = _prevctx;
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 192;
            if (!(precpred(context, 13))) {
              throw FailedPredicateException(this, "precpred(context, 13)");
            }
            state = 193;
            _localctx.operator_ = tokenStream.LT(1);
            _la = tokenStream.LA(1)!;
            if (!(_la == TOKEN_EQUAL || _la == TOKEN_NOT_EQUAL)) {
              _localctx.operator_ = errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 194;
            _localctx.right = expression(14);
            break;
          case 4:
            _localctx = CompareOperationContext(new ExpressionContext(_parentctx, _parentState));
            _localctx.left = _prevctx;
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 195;
            if (!(precpred(context, 12))) {
              throw FailedPredicateException(this, "precpred(context, 12)");
            }
            state = 196;
            _localctx.operator_ = tokenStream.LT(1);
            _la = tokenStream.LA(1)!;
            if (!(_la == TOKEN_LARROW || _la == TOKEN_RARROW)) {
              _localctx.operator_ = errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 197;
            _localctx.right = expression(13);
            break;
          case 5:
            _localctx = CompareOperationContext(new ExpressionContext(_parentctx, _parentState));
            _localctx.left = _prevctx;
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 198;
            if (!(precpred(context, 11))) {
              throw FailedPredicateException(this, "precpred(context, 11)");
            }
            state = 199;
            _localctx.operator_ = tokenStream.LT(1);
            _la = tokenStream.LA(1)!;
            if (!(_la == TOKEN_GREATER_EQ || _la == TOKEN_LOWER_EQ)) {
              _localctx.operator_ = errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 200;
            _localctx.right = expression(12);
            break;
          case 6:
            _localctx = LogicOperationContext(new ExpressionContext(_parentctx, _parentState));
            _localctx.left = _prevctx;
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 201;
            if (!(precpred(context, 10))) {
              throw FailedPredicateException(this, "precpred(context, 10)");
            }
            state = 202;
            _localctx.operator_ = tokenStream.LT(1);
            _la = tokenStream.LA(1)!;
            if (!(_la == TOKEN_AND || _la == TOKEN_OR)) {
              _localctx.operator_ = errorHandler.recoverInline(this);
            } else {
              if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
              errorHandler.reportMatch(this);
              consume();
            }
            state = 203;
            _localctx.right = expression(11);
            break;
          case 7:
            _localctx = TypeConversionContext(new ExpressionContext(_parentctx, _parentState));
            _localctx.value = _prevctx;
            pushNewRecursionContext(_localctx, _startState, RULE_expression);
            state = 204;
            if (!(precpred(context, 8))) {
              throw FailedPredicateException(this, "precpred(context, 8)");
            }
            state = 205;
            match(TOKEN_AS);
            state = 206;
            _localctx.targetType = type();
            break;
          } 
        }
        state = 211;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 23, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }

  IfContext if_() {
    dynamic _localctx = IfContext(context, state);
    enterRule(_localctx, 26, RULE_if);
    try {
      enterOuterAlt(_localctx, 1);
      state = 212;
      match(TOKEN_IF);
      state = 213;
      match(TOKEN_LPAREN);
      state = 214;
      expression(0);
      state = 215;
      match(TOKEN_RPAREN);
      state = 216;
      statement();
      state = 226;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 25, context)) {
      case 1:
        state = 217;
        match(TOKEN_ELSE);
        state = 223;
        errorHandler.sync(this);
        switch (interpreter!.adaptivePredict(tokenStream, 24, context)) {
        case 1:
          state = 218;
          match(TOKEN_IF);
          state = 219;
          match(TOKEN_LPAREN);
          state = 220;
          expression(0);
          state = 221;
          match(TOKEN_RPAREN);
          break;
        }
        state = 225;
        statement();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  WhileContext while_() {
    dynamic _localctx = WhileContext(context, state);
    enterRule(_localctx, 28, RULE_while);
    try {
      enterOuterAlt(_localctx, 1);
      state = 228;
      match(TOKEN_WHILE);
      state = 229;
      match(TOKEN_LPAREN);
      state = 230;
      expression(0);
      state = 231;
      match(TOKEN_RPAREN);
      state = 232;
      statement();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
